Change title and heading

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inlay</title>
+  <title>Booklet</title>
 </head>
 <body>
   <div class="container">
-    <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack x jacoedo gmbh</h1>
+    <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;jaco/edo media group</h1>
     <h2 class="animate__animated animate__fadeInDown animate__delay-2s animate__slower">hört sich gut an!</h2>
     <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lies die broschüre 😎</h3>
     <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="inlay-container">
