Add interactability tip

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
           <div class="page-content" style="background-image: url(https://picsum.photos/600/600?random=8)"></div>
         </div>
       </div>
+      <p class="subtext"><em>pssst...einfach draufklicken!</em>☝</p>
     </div>
   </div>
 </body>
