--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <title>Booklet</title>
 </head>
 <body>
@@ -11,8 +13,8 @@
     <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;jaco/edo media group</h1>
     <h2 class="animate__animated animate__fadeInDown animate__delay-2s animate__slower">hört sich gut an!</h2>
     <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lies die broschüre 😎</h3>
-    <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="inlay-container">
-      <div class="flip-book" id="inlay">
+    <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="booklet-container">
+      <div class="flip-book" id="booklet">
         <div class="page">
           <div class="page-content" style="background-image: url(https://picsum.photos/600/600?random=1)"></div>
         </div>
@@ -39,6 +41,7 @@
         </div>
       </div>
       <p class="subtext"><em>pssst...einfach draufklicken!</em>☝</p>
+      <p class="subtext"><em>oder <strong><a href="michelle_durhack_booklet.pdf" target="_blank">hochauflösende PDF Version</a></strong> downloaden.</em></p>
     </div>
   </div>
 </body>
