Change title and fix typo

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>Booklet</title>
+  <title>michelle durhack   x   jaco/edo media group</title>
 </head>
 <body>
   <div class="container">
     <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;jaco/edo media group</h1>
     <h2 class="animate__animated animate__fadeInDown animate__delay-2s animate__slower">hört sich gut an!</h2>
-    <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lies die broschüre 😎</h3>
+    <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lies die Broschüre 😎</h3>
     <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="booklet-container">
       <div class="flip-book" id="booklet">
         <div class="page">
