--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <p class="subtext"><em>pssst...einfach draufklicken!</em>☝</p>
-      <p class="subtext"><em>oder <strong><a href="michelle_durhack_booklet.pdf" target="_blank">hochauflösende PDF Version</a></strong> downloaden.</em></p>
+      <p class="subtext"><em>oder <a href="michelle_durhack_booklet.pdf" target="_blank">hochauflösende PDF Version</a> downloaden.</em></p>
     </div>
   </div>
 </body>
