--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="booklet-container">
       <div class="flip-book" id="booklet">
         <div class="page">
-          <div class="page-content" style="background-image: url(https://picsum.photos/600/600?random=1)"></div>
+          <div class="page-content" style="background-image: url(./booklet/0.png)"></div>
         </div>
         <div class="page">
           <div class="page-content" style="background-image: url(https://picsum.photos/600/600?random=2)"></div>
