Add final favicon and meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <title>michelle durhack   x   jaco/edo media group</title>
+  <meta name="description" content="Ausbildungsbewerbung von Michelle Durhack"/>
+  <meta property="og:title" content="michelle durhack x jaco/edo media group" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://michellexjacoedo.netlify.app/favicon-32x32.png" />
+  <meta property="og:url" content="https://michellexjacoedo.netlify.app" />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@DurhackMichelle">
+  <meta name="twitter:title" content="michelle durhack x jaco/edo media group">
+  <meta name="twitter:description" content="Ausbildungsbewerbung von Michelle Durhack">
+  <title>michelle durhack x jaco/edo media group</title>
 </head>
   <body>
     <div class="container">
