Add link to full portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <title>michelle durhack x jaco/edo media group</title>
 </head>
   <body>
+      <h1><a href="http://michelledurhack.github.io/">zurück zum Portfolio</a></h1>
     <div class="container">
       <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;jaco/edo media group</h1>
       <h2 class="animate__animated animate__fadeInDown animate__delay-2s animate__slower">hört sich gut an!</h2>
