--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
             <div class="page-content" style="background-image: url(./booklet/7.png)"></div>
           </div>
         </div>
+      </div>
+      <p id="size-warning"><strong>Achtung, zur korrekten Anzeige des Booklets wird eine Mindestfensterbreite von 900 pixeln empfohlen, Texte und Illustrationen sind sonst schwer lesbar.</strong></p>
+      <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower">
         <p class="subtext"><em>pssst...einfach draufklicken!</em>☝</p>
         <p class="subtext"><em>oder <a href="michelle_durhack_booklet.pdf" target="_blank">hochauflösende PDF Version</a> downloaden.</em></p>
       </div>
