Change booklet border color, remove booklet box shadow, reword warning

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-      <p id="size-warning"><strong>Achtung, zur korrekten Anzeige des Booklets wird eine Mindestfensterbreite von 900 pixeln empfohlen, Texte und Illustrationen sind sonst schwer lesbar.</strong></p>
+      <p id="size-warning"><strong>Achtung, zur korrekten Anzeige des Booklets wird eine Mindestfensterbreite von 900 pixeln auf einem Desktop empfohlen, Texte und Illustrationen sind sonst schwer lesbar.</strong></p>
       <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower">
         <p class="subtext"><em>pssst...einfach draufklicken!</em>☝</p>
         <p class="subtext"><em>oder <a href="michelle_durhack_booklet.pdf" target="_blank">hochauflösende PDF Version</a> downloaden.</em></p>
