Remove all mention of jacoedo gmbh and change meta tag links

--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,22 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <meta name="description" content="Ausbildungsbewerbung von Michelle Durhack"/>
-  <meta property="og:title" content="michelle durhack x jaco/edo media group" />
+  <meta property="og:title" content="michelle durhack booklet" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://michellexjacoedo.netlify.app/favicon-32x32.png" />
-  <meta property="og:url" content="https://michellexjacoedo.netlify.app" />
+  <meta property="og:image" content="https://michelle-booklet.netlify.app/favicon-32x32.png" />
+  <meta property="og:url" content="https://michelle-booklet.netlify.app/" />
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@DurhackMichelle">
-  <meta name="twitter:title" content="michelle durhack x jaco/edo media group">
+  <meta name="twitter:title" content="michelle durhack booklet">
   <meta name="twitter:description" content="Ausbildungsbewerbung von Michelle Durhack">
-  <title>michelle durhack x jaco/edo media group</title>
+  <title>michelle durhack x Ihre firma</title>
 </head>
   <body>
       <h1><a href="https://michelledurhack.github.io/design">zurück zum Portfolio</a></h1>
     <div class="container">
-      <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;jaco/edo media group</h1>
+      <h1 class="animate__animated animate__fadeInDown animate__slower">michelle durhack&nbsp;&nbsp;&nbsp;x&nbsp;&nbsp;&nbsp;Ihre firma</h1>
       <h2 class="animate__animated animate__fadeInDown animate__delay-2s animate__slower">hört sich gut an!</h2>
-      <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lies die Broschüre 😎</h3>
+      <h2 class="animate__animated animate__fadeInDown animate__delay-4s animate__slower">noch nicht überzeugt? dann lesen Sie die Broschüre 😎</h3>
       <div class="animate__animated animate__fadeIn animate__delay-5s animate__slower" id="booklet-container">
         <div class="flip-book" id="booklet">
           <div class="page">
